--- a/i3/config
+++ b/i3/config
@@ -1,23 +1,27 @@
-default_border pixel 0
-exec --no-startup-id "setxkbmap -layout us,ru -option 'grp:alt_shift_toggle'"
-
 set $mod Mod4
+font pango:JetBrains Mono 8
 
-font pango:monospace 8
+default_border pixel 0
+
+# workspaces
+workspace 8 output eDP1
+
+# apps
+set $terminal alacritty
 
 exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
+# Focus the last window tool
+exec_always i3-focus-last server
+
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
 
 set $up l
 set $down k
@@ -29,12 +33,13 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec $terminal
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id dmenu_run -fn "JetBrains Mono-11"
 # change focus
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
@@ -73,6 +78,8 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 # move the currently focused window to the scratchpad
 bindsym $mod+Shift+minus move scratchpad
+# Last focused window
+bindsym $mod+Tab exec i3-focus-last
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
@@ -91,7 +98,7 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
+# Switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -103,7 +110,7 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
-# move focused container to workspace
+# Move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -151,25 +158,27 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# Bar configuration
 bar {
     status_command i3status
     font pango:JetBrains Mono 10
 
     colors {
-        background       #1B1E28 
-
+        background       #1B1E28
         focused_workspace #5DE4C7 #5DE4C7 #000000
         inactive_workspace #2A2C34 #2A2C34 #ffffff
         urgent_workspace #D0679D #D0679D #ffffff
         active_workspace #2A2C34 #2A2C34 #ffffff
-        
+
     }
 }
+
 
 exec i3-config-wizard
 
 # Wallpapers
 exec --no-startup-id feh --bg-scale ~/.config/i3/wallpapers/mac.jpg
 
+# Keyboard layout
+exec_always --no-startup-id "setxkbmap -layout us,ru -option 'grp:alt_shift_toggle'"
+exec_always --no-startup-id "setxkbmap -option ctrl:nocaps"
