--- a/i3/config
+++ b/i3/config
@@ -23,16 +23,16 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 
-set $up l
-set $down k
-set $left j
-set $right semicolon
+set $up k
+set $down j
+set $left h
+set $right l
 
 floating_modifier $mod
 
 tiling_drag modifier titlebar
 
-# terminal
+# open terminal 
 bindsym $mod+Return exec $terminal
 
 # kill focused window
@@ -61,7 +61,7 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 # split in horizontal orientation
-bindsym $mod+h split h
+# bindsym $mod+h split h
 # split in vertical orientation
 bindsym $mod+v split v
 # enter fullscreen mode for the focused container
@@ -78,15 +78,13 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 # move the currently focused window to the scratchpad
 bindsym $mod+Shift+minus move scratchpad
-# Last focused window
+# last focused window
 bindsym $mod+Tab exec i3-focus-last
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+minus scratchpad show
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -173,15 +171,10 @@ bar {
     }
 }
 
-
-exec i3-config-wizard
-
 # Notifications 
 exec --no-startup-id dunst
-
 # Wallpapers
 exec --no-startup-id feh --bg-scale ~/.config/i3/wallpapers/mac.jpg
-
 # Keyboard layout
-exec_always --no-startup-id "setxkbmap -layout us,ru -option 'grp:alt_shift_toggle'"
-exec_always --no-startup-id "setxkbmap -option ctrl:nocaps"
+# EN, RU languges and Ctrl on CapsLock
+exec_always --no-startup-id "setxkbmap -layout us,ru -option grp:alt_shift_toggle,ctrl:nocaps"
