--- a/i3/config
+++ b/i3/config
@@ -13,15 +13,11 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
-# Focus the last window tool
-exec_always i3-focus-last server
-
 # Use pactl to adjust volume in PulseAudio.
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
-
 
 set $up k
 set $down j
@@ -38,8 +34,13 @@ bindsym $mod+Return exec $terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
+# Start dmenu 
 bindsym $mod+d exec --no-startup-id dmenu_run -fn "JetBrains Mono-11"
+# Notifications 
+exec --no-startup-id dunst
+# Wallpapers
+exec --no-startup-id feh --bg-scale ~/.config/i3/wallpapers/mac.jpg
+
 # change focus
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
@@ -78,8 +79,6 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 # move the currently focused window to the scratchpad
 bindsym $mod+Shift+minus move scratchpad
-# last focused window
-bindsym $mod+Tab exec i3-focus-last
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
@@ -121,60 +120,45 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # Screenshots
-bindsym Ctrl+Shift+1 exec --no-startup-id bash -c 'maim -s | xclip -selection clipboard -t image/png'
+bindsym $mod+Print exec --no-startup-id bash -c 'maim -s | xclip -selection clipboard -t image/png'
 
-# reload the configuration file bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+# restart i3 inplace
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# resize window (you can also use the mouse for that)
+# Resize mode
+bindsym $mod+r mode "resize"
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
         bindsym $left       resize shrink width 10 px or 10 ppt
         bindsym $down       resize grow height 10 px or 10 ppt
         bindsym $up         resize shrink height 10 px or 10 ppt
         bindsym $right      resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
         bindsym Left        resize shrink width 10 px or 10 ppt
         bindsym Down        resize grow height 10 px or 10 ppt
         bindsym Up          resize shrink height 10 px or 10 ppt
         bindsym Right       resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
         bindsym $mod+r mode "default"
+        bindsym $mod+q mode "default"
 }
 
-bindsym $mod+r mode "resize"
-
-# Bar configuration
 bar {
     status_command i3status
-    font pango:JetBrains Mono 10
+    font pango:JetBrains Mono 11
 
     colors {
         background       #1B1E28
-        focused_workspace #5DE4C7 #5DE4C7 #000000
+        focused_workspace #FCD34D #FCD34D #000000
         inactive_workspace #2A2C34 #2A2C34 #ffffff
         urgent_workspace #D0679D #D0679D #ffffff
         active_workspace #2A2C34 #2A2C34 #ffffff
-
     }
 }
 
-# Notifications 
-exec --no-startup-id dunst
-# Wallpapers
-exec --no-startup-id feh --bg-scale ~/.config/i3/wallpapers/mac.jpg
 # Keyboard layout
 # EN, RU languges and Ctrl on CapsLock
 exec_always --no-startup-id "setxkbmap -layout us,ru -option grp:alt_shift_toggle,ctrl:nocaps"
