--- a/i3/config
+++ b/i3/config
@@ -35,11 +35,11 @@ bindsym $mod+Return exec $terminal
 bindsym $mod+Shift+q kill
 
 # Start dmenu 
-bindsym $mod+d exec --no-startup-id dmenu_run -fn "JetBrains Mono-11"
+bindsym $mod+d exec --no-startup-id ~/.config/i3/dmenu.sh
 # Notifications 
 exec --no-startup-id dunst
 # Wallpapers
-exec --no-startup-id feh --bg-scale ~/.config/i3/wallpapers/mac.jpg
+exec --no-startup-id feh --bg-fill ~/.config/i3/wallpapers/mac.jpg
 
 # change focus
 bindsym $mod+$left focus left
